[tool.poetry]
name = "tictactoe-flet"
version = "0.1.0"
description = ""
authors = ["adikpb <67222969+adikpb@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flet = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
